# aistudio-samples

./: LICENSE  README  README.html  README.md  requirements.txt
.Trash-1000/info/: finetuned-squad.trashinfo  runs 1.trashinfo  runs.trashinfo
42025_hackerton /: README
ai-studio-fundamentals/: Iris flowers classification.ipynb  README.md  Recommender Systems.ipynb  Spam Detection and NLP.ipynb  [MLFlow] MNIST with Keras.ipynb
ai-studio-fundamentals/classification/: K-nearest neighbors for classification.ipynb  Placement classification with sklearn.ipynb  README.md  Smoke detection with KNN.ipynb  Spam Detection and NLP.ipynb  car_brands.html
ai-studio-fundamentals/clustering/: K-means with blobs.ipynb
ai-studio-fundamentals/forecasting/: README.md  RNN_for_time_series_TF.ipynb  RNN_for_time_series_Torch.ipynb  general_forecasting_sklearn_statsmodel.ipynb  seasonal_forecasting_sklearn_statsmodel.ipynb
ai-studio-fundamentals/recommendation/: README.md  Recommender Systems.ipynb
deep-learning-in-ais/: README.md
deep-learning-in-ais/bert_qa/: Deployment.ipynb  README.md  Testing Mlflow Server.ipynb  Training.ipynb  deploy.py  requirements.txt
deep-learning-in-ais/image_classification/: MNIST with Keras.ipynb
deep-learning-in-ais/image_generation_deepseek_janus_pro/: Janus-Pro.ipynb  requirements.txt  (+1 more)
myenv/: pyvenv.cfg
ngc-integration/: README.md
ngc-integration/tourism_recommendations_agent_with_bert/demo/streamlit-webapp/: pyproject.toml
ngc-integration/tourism_recommendations_agent_with_bert/demo/streamlit-webapp/src/tourism_demo/: main.py
(+267 files in other folders)
