[project]
name = "tourism-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "ata-turhan",email = "ata.turhan@hp.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tourism_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
